# IceTorrent

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/network/: mod.rs  protocol.rs  tracker.rs
src/torrent/: client.rs  mod.rs  models.rs  parser.rs
src/ui/: add_torrent.rs  main_window.rs  mod.rs  torrent_list.rs
