[package]
name = "icetorrent"
version = "0.6.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
reqwest = "0.11"
bytes = "1.0"
sha1 = "0.10"
hex = "0.4"
url = "2.0"
rand = "0.8"
futures = "0.3"
percent-encoding = "2.0"

# UI dependencies
egui = "0.24"
eframe = "0.24"
poll-promise = "0.3"

# Для работы с файлами
tokio-util = "0.7"
walkdir = "2.3"
